--- a/Agenda/sushi-config.yaml
+++ b/Agenda/sushi-config.yaml
@@ -83,9 +83,9 @@ pages:
 # │ property below.                                                                                │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 menu:
-  Inicio: Index.html
+  Index: Index.html
   Objetivos: Objetivos.html
-  CasosDeUsos: CasosDeUsos.html
+  Casos De Usos: CasosDeUsos.html
   Seguridad: Seguridad.html
   Artifacts: artifacts.html
 
